--- a/css/texinfo.css
+++ b/css/texinfo.css
@@ -1,6 +1,15 @@
 
-.node {
-   background: #FCFCFC;
-   border-left: 12px solid transparent;
-   border-right: 12px solid transparent;
+.span-24 {
+   background: #F2F2F2;
+   padding-left: 12px;
+   padding-right: 12px;
+}
+
+h2 {
+   border-top:4px solid #888;
+   padding-top:4px solid #888;
+}
+h3 {
+   border-top:3px solid #CCC;
+   padding-top:3px solid #CCC;
 }
