--- a/css/screen.css
+++ b/css/screen.css
@@ -17,12 +17,14 @@ body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, 
 article, aside, details, figcaption, figure, dialog, footer, header, hgroup, menu, nav, section {display:block;}
 body {line-height:1.5;background:white;}
 table {border-collapse:separate;border-spacing:0;}
-caption, th, td {text-align:left;font-weight:normal;float:none !important;}
+caption, th, td {text-align:left;font-weight:normal;float:none !important;white-space:nowrap;}
 table, th, td {vertical-align:middle;}
 blockquote:before, blockquote:after, q:before, q:after {content:'';}
 blockquote, q {quotes:"" "";}
 a img {border:none;}
 :focus {outline:0;}
+
+.TSS {width:150px;text-align:center;white-space:normal;}
 
 /* typography.css */
 html {font-size:100.01%;}
