--- a/css/custom.css
+++ b/css/custom.css
@@ -13,86 +13,82 @@ h3 {
 pre, code, tt {font:1.3em monospace;line-height:1.5;}
 
 .mot1 {
- color: #D5CEBB;
-    background: #F1EEE8;
-    font-weight:bold;
+   color: #FF00;
+   background: #FFAAAA;
+   font-weight:bold;
 }
 table tr:nth-child(even) td.mot1 {
-    background: #F1EEE8;
+   background: #FFAAAA;
 }
 .mot2 {
- color: #9CCED9;
-    background: #DEEEF2;
-    font-weight:bold;
+   color: #00FF;
+   background: #AAAAFF;
+   font-weight:bold;
 }
 td.mot2 {
-    background: #DEEEF2;
+   background: #AAAAFF;
 }
 .mot3 {
- color: #CA96E1;
-    background: #EDDCF5;
-    font-weight:bold;
+   color: #0FF0;
+   background: #AAFFAA;
+   font-weight:bold;
 }
 table tr:nth-child(even) td.mot3 {
-    background: #EDDCF5;
+   background: #AAFFAA;
 }
 .mot4 {
- color: #82CFD4;
-    background: #D5EFF0;
-    font-weight:bold;
+   color: #FFFF0;
+   background: #FFFFAA;
+   font-weight:bold;
 }
 td.mot4 {
-    background: #D5EFF0;
+   background: #FFFFAA;
 }
 .mot5 {
- color: #B7AEA0;
-    background: #E7E4DF;
-    font-weight:bold;
+   color: #BF7F3F;
+   background: #E9D4BF;
+   font-weight:bold;
 }
 table tr:nth-child(even) td.mot5 {
-    background: #E7E4DF;
+   background: #E9D4BF;
 }
 .mot6 {
- color: #83BFEF;
-    background: #D5E9F9;
-    font-weight:bold;
+   color: #FF0FF;
+   background: #FFAAFF;
+   font-weight:bold;
 }
 td.mot6 {
-    background: #D5E9F9;
+   background: #FFAAFF;
 }
 .mot7 {
- color: #DCB6BC;
-    background: #F3E6E8;
-    font-weight:bold;
+   color: #0FFFF;
+   background: #AAFFFF;
+   font-weight:bold;
 }
 table tr:nth-child(even) td.mot7 {
-    background: #F3E6E8;
+   background: #AAFFFF;
 }
 .mot8 {
- color: #F8E4AF;
-    background: #FCF6E4;
-    font-weight:bold;
+   color: #7F07F;
+   background: #D4AAD4;
+   font-weight:bold;
 }
 td.mot8 {
-    background: #FCF6E4;
+   background: #D4AAD4;
 }
 .mot9 {
- color: #CB81FD;
-    background: #EDD5FE;
-    font-weight:bold;
+   color: #FF7F0;
+   background: #FFD4AA;
+   font-weight:bold;
 }
 table tr:nth-child(even) td.mot9 {
-    background: #EDD5FE;
+   background: #FFD4AA;
 }
 .mot10 {
- color: #84F5FD;
-    background: #D6FBFE;
-    font-weight:bold;
+   color: #7F7F0;
+   background: #D4D4AA;
+   font-weight:bold;
 }
 td.mot10 {
-    background: #D6FBFE;
-}
-
-.conserved {
-   font-style:italic;
+   background: #D4D4AA;
 }
